--- a/docs/references.bib
+++ b/docs/references.bib
@@ -6,20 +6,28 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
-
 @article{Bae,
 	abstract = {Recent experiences influence the processing of new information even when those experiences are irrelevant to the current task. Does this reflect the indirect effects of a passively maintained representation of the previous experience, or is this representation reactivated when a new event occurs? To answer this question, we attempted to decode the orientation of the stimulus on the previous trial from the electroencephalogram on the current trial in a working memory task. Behavioral data confirmed that the previous-trial stimulus orientation influenced the reported orientation on the current trial, even though the previous-trial orientation was now task irrelevant. In two independent experiments, we found that the previous-trial orientation could be decoded from the current-trial electroencephalogram, indicating that the current-trial stimulus reactivated or boosted the representation of the previous-trial orientation. These results suggest that the effects of recent experiences on behavior are driven, in part, by a reactivation of those experiences and not solely by the indirect effects of passive memory traces.},
 	author = {Gi-Yeul Bae and Steven J Luck},
 	date-modified = {2022-03-22 12:48:40 +0000},
-	doi = {10.1177/0956797619834879},
-	eprint = {https://doi.org/10.1177/0956797619834879},
+	doi = {10.1177/0956797619830398},
+	eprint = {https://doi.org/10.1177/0956797619830398},
 	journal = {Psychological Science},
 	note = {PMID: 30817224},
 	number = {4},
 	pages = {587-595},
 	title = {Reactivation of previous experiences in a working memory task},
-	url = {https://doi.org/10.1177/0956797619834879},
+	url = {https://doi.org/10.1177/0956797619830398},
 	volume = {30},
-	year = {2019},
-	bdsk-url-1 = {https://doi.org/10.1177/0956797619834879}}
+	year = {2019}}
+
+@article{Groope,
+  author = {Groppe, D. M. and Urbach, T. P. and Kutas, M.},
+  year = {2011},
+  title = {{Mass univariate analysis of event-related brain potentials/fields I: A critical tutorial review}},
+  journal = {Psychophysiology},
+  number = {46},
+  pages = {1711-1725},
+  doi = {10.1111/j.1469-8986.2011.01273.x},
+  url = {https://doi.org/10.1111/j.1469-8986.2011.01273.x}
+}
